# snappy-hs

./: CHANGELOG.md  LICENSE  README.md  cabal.project  snappy-hs.cabal
app/: Main.hs
benchmark/: Bench.hs  Main.hs
src/: Snappy.hs
test/: Main.hs
