cabal-version:      3.0
name:               snappy-hs
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/mchav/snappy-hs#readme
license:            MIT
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Snappy

    build-depends:    base >=4.11 && <5
                    , bytestring ^>= 0.12
                    , vector ^>= 0.13
    hs-source-dirs:   src
    default-language: Haskell2010

executable snappy-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.11 && <5,
        bytestring ^>= 0.12,
        snappy-hs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite snappy-hs-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.11 && <5,
        snappy-hs

benchmark snappy-benchmark
    type:       exitcode-stdio-1.0
    main-is:    Main.hs
    hs-source-dirs: benchmark
    build-depends: base >= 4.17.2.0 && < 4.22,
                   criterion >= 1 && <= 1.6.4.0,
                   bytestring ^>= 0.12,
                   snappy ^>= 0.2,
                   snappy-hs
    default-language: Haskell2010
